# sdk

./: .gitignore  BUILD.bazel  CHANGELOG.md  MODULE.bazel  README.md
.cursor/: environment.json
.cursor/scripts/: install-cloud-toolchains.sh
.github/workflows/: ci.yml  integration.yml  publish-laravel.yml  publish-python.yml  publish-rust.yml  publish-typescript.yml  release-validation.yml
docs/: release-playbook.md  sandbox-walkthrough.md
scripts/release/: common.sh  release_all.sh  release_go.sh  release_laravel.sh  release_python.sh  release_rust.sh  release_typescript.sh
scripts/tests/: BUILD.bazel  integration_go.sh  integration_laravel.sh  integration_python.sh  integration_rust.sh  integration_typescript.sh  run_all_integration.sh  run_all_smoke.sh  smoke_go.sh  smoke_laravel.sh  smoke_python.sh  smoke_rust.sh  smoke_typescript.sh
scripts/tests/parity/: assert_parity.py  fixture_server.py  php-client.php  py-client.py  run_parity.sh  ts-client.mjs
scripts/tests/parity/go-client/: go.mod  main.go
scripts/tests/parity/rust-client/: Cargo.toml
scripts/tests/parity/rust-client/src/: main.rs
sdks/go/: BUILD.bazel  README.md  go.mod
sdks/go/examples/: basic.go  offramp_gateway.go
sdks/go/integration/: main.go
sdks/go/sdk/: abi.go  client.go  contract_test.go  encryption.go  errors.go  gateway.go  gateway_client.go  gateway_test.go  networks.go  offramp_types.go  provider.go  registry.go  registry_concurrency_test.go  rough_edges_test.go  sender.go  smoke_test.go  types.go  webhook_middleware.go  webhook_middleware_test.go  webhooks.go
sdks/laravel/: BUILD.bazel  README.md  composer.json  phpunit.xml.dist
sdks/laravel/config/: paycrest.php
sdks/laravel/examples/: offramp_gateway.php
sdks/laravel/src/: PaycrestServiceProvider.php
sdks/laravel/src/Client/: HttpClient.php  PaycrestClient.php  ProviderClient.php  SenderClient.php
sdks/laravel/src/Contracts/: ProviderClientInterface.php  SenderClientInterface.php
sdks/laravel/src/Errors/: AuthenticationError.php  ErrorClassifier.php  FieldError.php  NetworkError.php  NotFoundError.php  OrderRejectedError.php  PaycrestApiError.php  ProviderUnavailableError.php  RateLimitError.php  RateQuoteUnavailableError.php  ValidationError.php
sdks/laravel/src/Facades/: Paycrest.php
sdks/laravel/src/Gateway/: Encryption.php  Gateway.php  GatewayClient.php  GatewayTransactor.php  TokenRegistry.php
sdks/laravel/src/Networks/: Networks.php
sdks/laravel/src/Queries/: ListOrdersQuery.php  ProviderListOrdersQuery.php  WaitForStatusOptions.php
sdks/laravel/src/Support/: Uuid.php
sdks/laravel/src/Webhooks/: VerifyPaycrestWebhook.php  WebhookEvent.php  WebhookVerifier.php
sdks/laravel/tests/: ContractTest.php  IntegrationRunner.php  Pest.php  SmokeTest.php  TestCase.php
sdks/laravel/tests/Contract/: ClientCredentialsTest.php  GatewayContractTest.php  ProviderContractTest.php  RoughEdgesTest.php  SenderContractTest.php  WebhookMiddlewareTest.php
sdks/laravel/tests/Support/: MockHttpClient.php
sdks/laravel/tests/Unit/: SmokeTest.php
sdks/python/: BUILD.bazel  README.md  pyproject.toml
sdks/python/examples/: offramp_gateway.py
sdks/python/paycrest_sdk/: __init__.py  client.py  encryption.py  errors.py  gateway.py  gateway_client.py  http.py  networks.py  provider.py  registry.py  sender.py  webhook_middleware.py  webhooks.py
sdks/python/tests/: test_contract.py  test_registry_concurrency.py  test_smoke.py  test_webhook_middleware.py
sdks/rust/: BUILD.bazel  Cargo.toml  README.md
sdks/rust/examples/: basic.rs  integration.rs  offramp_gateway.rs
sdks/rust/src/: client.rs  contract_tests.rs  encryption.rs  error.rs  gateway.rs  lib.rs  models.rs  networks.rs  provider.rs  registry.rs  sender.rs  webhook_middleware.rs  webhook_tests.rs  webhooks.rs
sdks/typescript/: BUILD.bazel  README.md  package-lock.json  package.json  tsconfig.json
sdks/typescript/examples/: basic.ts  offramp-gateway.ts
sdks/typescript/src/: abi.ts  client.ts  encryption.ts  errors.ts  gateway-client.ts  gateway.ts  http.ts  index.ts  networks.ts  provider.ts  registry.ts  sender.ts  types.ts  webhook-middleware.ts  webhooks.ts
sdks/typescript/tests/: contract.mjs  smoke.mjs  webhook.mjs
specs/: openapi.yaml  sender-v2.openapi.yaml
