[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "paycrest-sdk"
version = "2.0.0"
description = "Official Paycrest SDK for Python"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPL-3.0-or-later" }
authors = [
  { name = "Paycrest" }
]
dependencies = [
  "cryptography>=41.0.0",
]
classifiers = [
  "License :: OSI Approved :: GNU Affero General Public License v3",
  "Programming Language :: Python :: 3"
]

[tool.setuptools.packages.find]
include = ["paycrest_sdk*"]
