[package]
name = "paycrest-sdk"
version = "2.0.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Official Paycrest Sender SDK v2 for Rust"

[dependencies]
hex = "0.4"
hmac = "0.13.0-rc.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0-rc.2"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
