[package]
name = "paycrest-sdk"
version = "2.0.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Official Paycrest SDK for Rust"

[dependencies]
aes-gcm = "0.10"
async-trait = "0.1"
base64 = "0.22"
hex = "0.4"
hmac = "0.13.0-rc.2"
num-bigint = "0.4"
rand = "0.8"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rsa = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0-rc.2"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
uuid = { version = "1", features = ["v4"] }
